# OpenGLExperiments

./: CMakeLists.txt  Makefile  README.md
app/: camera.cpp  coordinateSystems.cpp  coordinateSystems2.cpp  movingAround.cpp  myFirstQuad.cpp  myFirstTriangle.cpp  textures.cpp  translations.cpp  triangleRGB.cpp  viewer.cpp
libs/core/: ArrayBuffer.cpp  ArrayBuffer.h  ArrayObject.cpp  ArrayObject.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ElementBuffer.cpp  ElementBuffer.h  Engine.cpp  Engine.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.h  TextureManager.cpp  TextureManager.h  Vertex.h  Window.cpp  Window.h
resources/shaders/: coordinateSystems.vert.glsl  coordinateSystems2.vert.glsl  shader.vert.glsl  translations.vert.glsl
